--- a/author.html
+++ b/author.html
@@ -47,6 +47,7 @@
     <link rel="shortcut icon" href="./favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="manifest" href="./site.webmanifest">
+    <script type="module" src="js/contacts.js"></script>
 </head>
 <body>
     <header class="header">
@@ -170,12 +171,13 @@
             <div class="container">
                 <h3>Stay tuned</h3>
                 <p>Don’t miss a step in the journey of discovery with Cappybara. Join us as we uncover the hidden forces shaping a sustainable future and stay updated on every new initiative, story, and insight.</p>
-                <form class="contact-form">
+                <form class="contact-form" id="contactForm">
                     <div class="form-group">
                         <label for="email">Your email</label>
                         <input type="email" id="email" name="email" placeholder="Type your email" required>
+                        <input type="hidden" id="source" name="source" value="author">
                     </div>
-                    <button class="primary-button" type="submit">Send</button>
+                    <button class="primary-button" id="submitBtn" type="submit">Send</button>
                 </form>
             </div>
         </section>
