--- a/pricing.html
+++ b/pricing.html
@@ -11,7 +11,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mkardash.github.io/cpb/">
-    <meta property="og:title" content="Cappybara: Pricing - Empower Creativity. Connect. Grow. Support.">
+    <meta property="og:title" content="Cappybara: Pricing - Pricing - Become Early Birds. Pay Simply.">
     <meta property="og:description" content="A simple way for Authors, Creators, Organizations, and Services to earn support and income — all in one place.">
     <meta property="og:image" content="https://mkardash.github.io/cpb/images/og-image.jpg">
     <meta property="og:image:width" content="512">
@@ -22,7 +22,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://mkardash.github.io/cpb/">
-    <meta name="twitter:title" content="Cappybara: Tips - Empower Creativity. Connect. Grow. Support.">
+    <meta name="twitter:title" content="Cappybara: Tips -  Pricing - Become Early Birds. Pay Simply.">
     <meta name="twitter:description" content="A simple way for Authors, Creators, Organizations, and Services to earn support and income — all in one place.">
     <meta name="twitter:image" content="https://mkardash.github.io/cpb/images/og-image.jpg">
 
@@ -36,7 +36,7 @@
     <meta name="mobile-web-app-capablee" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <title>Cappybara: Pricing - Empower Creativity. Connect. Grow. Support.</title>
+    <title>Cappybara: Pricing - Become Early Birds. Pay Simply.</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
